Attempt 1 at fixing social login buttons on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -129,11 +129,6 @@ h3 {
 	padding-top: 28px;
 }
 
-
-.profile_dropdown {
-	// padding-left: 5px;
-}
-
 .dropdown-menu-colors {
 	color: #ffffff;
 	background-color: #3C78D8;
@@ -717,4 +712,13 @@ h3 {
     body {
         padding-top: 50px;
     }
+    
+    .fb_button {
+        width: 75%;
+    }
+
+    .twtr_button {
+        width: 75%;
+    }
+
 }
